--- a/index.html
+++ b/index.html
@@ -4,150 +4,127 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Aryan & Aruu</title>
+
+  <!-- SEO META -->
+  <meta name="description" content="Aryan & Aruu ✨ Stylish website, wallpapers, and more.">
+  <meta name="keywords" content="Aryan, Aruu, Lakshu, Aryan Keer, stylish website, wallpapers">
+  <meta name="author" content="Aryan Keer">
+
+  <!-- Favicon -->
+  <link rel="icon" type="image/png" href="https://i.ibb.co/6c1QNLGt/IMG-20250924-153953.jpg">
+
   <style>
     body {
       margin: 0;
-      font-family: 'Poppins', sans-serif;
-      background: linear-gradient(135deg, #000428, #004e92);
-      color: white;
+      font-family: Arial, sans-serif;
+      background: #fafafa;
+      color: #222;
       text-align: center;
-      overflow-x: hidden;
+    }
+    header {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      padding: 15px 25px;
+      background: #000;
+      color: #fff;
+    }
+    header img {
+      height: 50px;
+      border-radius: 8px;
+    }
+    nav {
+      display: flex;
+      gap: 20px;
+    }
+    nav a {
+      color: #fff;
+      text-decoration: none;
+      font-weight: bold;
+    }
+    .hero {
+      padding: 50px 20px;
+    }
+    .hero h1 {
+      font-size: 2.5em;
+      margin-bottom: 10px;
+    }
+    .hero p {
+      font-size: 1.2em;
+      color: #444;
     }
 
-    h1 {
-      font-size: 55px;
-      margin-top: 20px;
-      text-shadow: 0px 0px 25px cyan, 0px 0px 40px blue;
-      animation: glow 2s infinite alternate;
-    }
-
-    @keyframes glow {
-      from { text-shadow: 0px 0px 10px cyan; }
-      to { text-shadow: 0px 0px 30px blue; }
-    }
-
-    img.main-photo {
-      width: 270px;
-      height: 320px;
-      object-fit: cover;
-      border-radius: 20px;
-      border: 4px solid cyan;
-      box-shadow: 0px 0px 25px cyan;
-      margin-top: 20px;
-      transition: transform 0.4s;
-    }
-
-    img.main-photo:hover {
-      transform: scale(1.05);
-      box-shadow: 0px 0px 40px #00f5ff;
-    }
-
-    .about {
+    /* Product Card */
+    .product-card {
+      max-width: 320px;
       margin: 40px auto;
-      width: 85%;
-      font-size: 20px;
-      line-height: 1.8;
-      background: rgba(255,255,255,0.1);
+      text-align: center;
+      border: 2px solid #eee;
+      border-radius: 12px;
       padding: 20px;
-      border-radius: 15px;
-      box-shadow: 0px 0px 20px rgba(0,255,255,0.4);
+      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+      background: #fff;
     }
-
-    .socials {
-      margin: 50px 0;
+    .product-card img {
+      width: 100%;
+      border-radius: 8px;
+      margin-bottom: 15px;
     }
-
-    .socials a {
-      margin: 0 20px;
-      display: inline-block;
-      transition: transform 0.3s, box-shadow 0.3s;
+    .product-card h3 {
+      margin: 10px 0;
     }
-
-    .socials img {
-      width: 60px;
-      height: 60px;
-      border-radius: 50%;
-      border: 3px solid white;
+    .product-card p {
+      font-size: 14px;
+      color: #444;
+      margin-bottom: 20px;
     }
-
-    .socials a:hover {
-      transform: scale(1.2);
-      box-shadow: 0px 0px 25px cyan;
-      border-radius: 50%;
+    .buy-btn {
+      background: #ff6b6b;
+      color: #fff;
+      padding: 12px 20px;
+      text-decoration: none;
+      border-radius: 6px;
+      font-weight: bold;
+      transition: background 0.3s;
     }
-
-    .extra-space {
-      height: 250px; /* scroll ke liye */
+    .buy-btn:hover {
+      background: #ff4040;
     }
-
     footer {
-      margin-top: 40px;
+      margin-top: 50px;
       padding: 20px;
-      background: rgba(255,255,255,0.1);
-      border-top: 2px solid cyan;
-      font-size: 20px;
-    }
-
-    .love {
-      font-size: 28px;
-      margin-top: 15px;
-      text-shadow: 0px 0px 15px pink, 0px 0px 30px red;
-      animation: heartbeat 1.5s infinite;
-    }
-
-    @keyframes heartbeat {
-      0%, 100% { transform: scale(1); }
-      50% { transform: scale(1.2); }
-    }
-
-    img.couple-photo {
-      width: 200px;
-      height: 200px;
-      border-radius: 50%;
-      border: 4px solid pink;
-      box-shadow: 0px 0px 20px hotpink;
-      margin-top: 15px;
-      object-fit: cover;
+      background: #000;
+      color: #fff;
+      font-size: 14px;
     }
   </style>
 </head>
 <body>
+  <header>
+    <img src="https://i.ibb.co/6c1QNLGt/IMG-20250924-153953.jpg" alt="Logo">
+    <nav>
+      <a href="#">Home</a>
+      <a href="#">About</a>
+      <a href="#">Shop</a>
+      <a href="#">Contact</a>
+    </nav>
+  </header>
 
-  <!-- Background Music -->
-  <audio autoplay loop>
-    <source src="https://www.bensound.com/bensound-music/bensound-romantic.mp3" type="audio/mpeg">
-  </audio>
-
-  <h1>⚡ Aryan Keer ⚡</h1>
-
-  <img class="main-photo" src="https://i.ibb.co/8Dfdkz1W/IMG-20250219-070558.jpg" alt="Aryan Photo">
-
-  <div class="about">
-    <p>Hey 👋, I’m <b>Aryan Keer</b>.<br>
-    Welcome to my stylish website 💙✨<br>
-    Life is short, so live it with full energy 🔥⚡</p>
+  <div class="hero">
+    <h1>✨ Aryan & Aruu ✨</h1>
+    <p>Life is short, so live it with full energy ⚡<br>Made with ❤️ by Aryan Keer ✨</p>
   </div>
 
-  <div class="socials">
-    <!-- Instagram -->
-    <a href="https://www.instagram.com/aryan_for_s?igsh=c3Z3ODB3NmlydzEx" target="_blank">
-      <img src="https://cdn-icons-png.flaticon.com/512/2111/2111463.png" alt="Instagram">
-    </a>
-
-    <!-- WhatsApp -->
-    <a href="https://wa.me/7000482653" target="_blank">
-      <img src="https://cdn-icons-png.flaticon.com/512/733/733585.png" alt="WhatsApp">
-    </a>
+  <!-- PRODUCT SECTION -->
+  <div class="product-card">
+    <img src="https://i.ibb.co/6c1QNLGt/IMG-20250924-153953.jpg" alt="Wallpaper Pack">
+    <h3>Aruu ❤️ Lakshu Wallpapers</h3>
+    <p>Exclusive HD wallpapers pack. Download and support us!</p>
+    <a href="https://gumroad.com/l/yourproduct" target="_blank" class="buy-btn">💖 Buy Now ₹99</a>
   </div>
-
-  <div class="extra-space"></div>
 
   <footer>
-    <p>✨ Made with ❤️ by Aryan Keer ✨</p>
-    <p class="love">💙 Aruu & Lakshu 💙</p>
-    <!-- Couple photo niche -->
-    <img class="couple-photo" src="https://i.ibb.co/B2N4R4wr/IMG-20250603-131234.jpg" alt="Aryan & Aruu">
+    © 2025 Aryan & Aruu. All rights reserved.
   </footer>
-
 </body>
 </html>
