--- a/index.html
+++ b/index.html
@@ -5,126 +5,335 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Aryan & Aruu</title>
 
-  <!-- SEO META -->
-  <meta name="description" content="Aryan & Aruu ✨ Stylish website, wallpapers, and more.">
-  <meta name="keywords" content="Aryan, Aruu, Lakshu, Aryan Keer, stylish website, wallpapers">
+  <!-- ✅ SEO Meta Tags -->
+  <meta name="description" content="Aryan & Aruu - A stylish website full of love, vibes, and positivity. 💙✨">
+  <meta name="keywords" content="Aryan, Aruu, Lakshu, Aryan Keer, Aryan & Aruu, Love Story, Couple Website, Stylish Website">
   <meta name="author" content="Aryan Keer">
+  <meta name="robots" content="index, follow">
 
-  <!-- Favicon -->
-  <link rel="icon" type="image/png" href="https://i.ibb.co/6c1QNLGt/IMG-20250924-153953.jpg">
+  <!-- ✅ Favicon -->
+  <link rel="icon" type="image/png" href="https://i.ibb.co/n8D3VyB4/aryan-logo.png">
 
   <style>
-    body {
+    :root {
+      --bg: #ffffff;
+      --text: #000000;
+      --accent: #0077ff;
+    }
+    [data-theme="dark"] {
+      --bg: #0d1117;
+      --text: #f0f6fc;
+      --accent: #58a6ff;
+    }
+    * {
       margin: 0;
-      font-family: Arial, sans-serif;
-      background: #fafafa;
-      color: #222;
-      text-align: center;
+      padding: 0;
+      box-sizing: border-box;
+      font-family: 'Poppins', sans-serif;
     }
-    header {
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      padding: 15px 25px;
-      background: #000;
-      color: #fff;
-    }
-    header img {
-      height: 50px;
-      border-radius: 8px;
-    }
-    nav {
-      display: flex;
-      gap: 20px;
-    }
-    nav a {
-      color: #fff;
-      text-decoration: none;
-      font-weight: bold;
-    }
-    .hero {
-      padding: 50px 20px;
-    }
-    .hero h1 {
-      font-size: 2.5em;
-      margin-bottom: 10px;
-    }
-    .hero p {
-      font-size: 1.2em;
-      color: #444;
+    body {
+      background: var(--bg);
+      color: var(--text);
+      transition: all 0.4s ease;
+      line-height: 1.6;
     }
 
-    /* Product Card */
-    .product-card {
-      max-width: 320px;
-      margin: 40px auto;
-      text-align: center;
-      border: 2px solid #eee;
-      border-radius: 12px;
-      padding: 20px;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
-      background: #fff;
+    /* Header */
+    header {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 10px 8%;
+      position: sticky;
+      top: 0;
+      background: var(--bg);
+      box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+      z-index: 10;
     }
-    .product-card img {
-      width: 100%;
-      border-radius: 8px;
-      margin-bottom: 15px;
+    .logo-area {
+      display: flex;
+      align-items: center;
+      gap: 10px;
     }
-    .product-card h3 {
-      margin: 10px 0;
+    .logo-area img {
+      width: 35px;
+      height: 35px;
+      border-radius: 50%;
+      border: 2px solid var(--accent);
     }
-    .product-card p {
-      font-size: 14px;
-      color: #444;
-      margin-bottom: 20px;
+    .logo-area h1 {
+      font-size: 20px;
+      color: var(--accent);
     }
-    .buy-btn {
-      background: #ff6b6b;
-      color: #fff;
-      padding: 12px 20px;
+
+    nav {
+      display: flex;
+      gap: 15px;
+    }
+    nav a {
       text-decoration: none;
-      border-radius: 6px;
-      font-weight: bold;
+      color: var(--text);
+      font-weight: 500;
+      transition: color 0.3s;
+    }
+    nav a:hover {
+      color: var(--accent);
+    }
+
+    .theme-toggle {
+      cursor: pointer;
+      font-size: 20px;
+      margin-left: 15px;
+    }
+
+    /* Hamburger */
+    .hamburger {
+      display: none;
+      flex-direction: column;
+      cursor: pointer;
+      gap: 4px;
+    }
+    .hamburger div {
+      width: 25px;
+      height: 3px;
+      background: var(--text);
+      border-radius: 5px;
+    }
+
+    @media (max-width: 768px) {
+      nav {
+        display: none;
+        flex-direction: column;
+        background: var(--bg);
+        position: absolute;
+        top: 55px;
+        right: 8%;
+        padding: 10px;
+        box-shadow: 0 2px 10px rgba(0,0,0,0.2);
+      }
+      nav.active {
+        display: flex;
+      }
+      .hamburger {
+        display: flex;
+      }
+    }
+
+    /* Section */
+    section {
+      padding: 60px 10%;
+      text-align: center;
+    }
+
+    .hero img {
+      width: 230px;
+      height: 280px;
+      border-radius: 15px;
+      object-fit: cover;
+      border: 4px solid var(--accent);
+      box-shadow: 0 0 20px var(--accent);
+      margin-top: 20px;
+    }
+    .hero h2 {
+      font-size: 28px;
+      margin-top: 20px;
+    }
+    .hero p {
+      margin-top: 10px;
+      font-size: 18px;
+    }
+
+    .about, .love, .contact, .payment {
+      opacity: 0;
+      transform: translateY(40px);
+      transition: all 0.8s ease;
+    }
+    .about.show, .love.show, .contact.show, .payment.show {
+      opacity: 1;
+      transform: translateY(0);
+    }
+
+    .love img {
+      width: 200px;
+      height: 200px;
+      border-radius: 50%;
+      border: 4px solid hotpink;
+      box-shadow: 0 0 20px pink;
+      margin-top: 20px;
+    }
+    .love h3 {
+      font-size: 24px;
+      margin-top: 15px;
+      color: hotpink;
+    }
+
+    .socials a {
+      margin: 0 15px;
+      display: inline-block;
+      transition: transform 0.3s;
+    }
+    .socials a:hover {
+      transform: scale(1.2);
+    }
+    .socials img {
+      width: 55px;
+      height: 55px;
+      border-radius: 50%;
+      border: 2px solid var(--text);
+    }
+
+    form {
+      margin-top: 25px;
+    }
+    input, textarea {
+      width: 90%;
+      max-width: 400px;
+      padding: 10px;
+      margin: 8px 0;
+      border: 2px solid var(--accent);
+      border-radius: 8px;
+      outline: none;
+      background: transparent;
+      color: var(--text);
+    }
+    button {
+      padding: 10px 20px;
+      background: var(--accent);
+      border: none;
+      color: white;
+      border-radius: 8px;
+      cursor: pointer;
       transition: background 0.3s;
     }
-    .buy-btn:hover {
-      background: #ff4040;
+    button:hover {
+      background: #005ec7;
     }
+
     footer {
-      margin-top: 50px;
       padding: 20px;
-      background: #000;
-      color: #fff;
-      font-size: 14px;
+      background: var(--bg);
+      border-top: 2px solid var(--accent);
+      text-align: center;
+      margin-top: 50px;
+    }
+
+    /* Payment Section */
+    .payment button {
+      font-size: 18px;
+      padding: 12px 25px;
+      background: green;
+    }
+    .upi-id {
+      margin-top: 15px;
+      font-size: 16px;
+      color: var(--text);
     }
   </style>
 </head>
 <body>
   <header>
-    <img src="https://i.ibb.co/6c1QNLGt/IMG-20250924-153953.jpg" alt="Logo">
+    <div class="logo-area">
+      <img src="https://i.ibb.co/n8D3VyB4/aryan-logo.png" alt="Logo">
+      <h1>Aryan & Aruu</h1>
+    </div>
     <nav>
-      <a href="#">Home</a>
-      <a href="#">About</a>
-      <a href="#">Shop</a>
-      <a href="#">Contact</a>
+      <a href="#home">Home</a>
+      <a href="#about">About</a>
+      <a href="#love">Love</a>
+      <a href="#contact">Contact</a>
+      <a href="#payment">Pay</a>
     </nav>
+    <div style="display:flex; align-items:center; gap:10px;">
+      <div class="theme-toggle" onclick="toggleTheme()">🌙</div>
+      <div class="hamburger" onclick="toggleMenu()">
+        <div></div>
+        <div></div>
+        <div></div>
+      </div>
+    </div>
   </header>
 
-  <div class="hero">
-    <h1>✨ Aryan & Aruu ✨</h1>
-    <p>Life is short, so live it with full energy ⚡<br>Made with ❤️ by Aryan Keer ✨</p>
-  </div>
+  <section class="hero" id="home">
+    <img src="https://i.ibb.co/8Dfdkz1W/IMG-20250219-070558.jpg" alt="Aryan">
+    <h2>Hey 👋, I’m Aryan Keer</h2>
+    <p>Life is short, so live it with full energy 🔥⚡</p>
+  </section>
 
-  <!-- PRODUCT SECTION -->
-  <div class="product-card">
-    <img src="https://i.ibb.co/6c1QNLGt/IMG-20250924-153953.jpg" alt="Wallpaper Pack">
-    <h3>Aruu ❤️ Lakshu Wallpapers</h3>
-    <p>Exclusive HD wallpapers pack. Download and support us!</p>
-    <a href="https://gumroad.com/l/yourproduct" target="_blank" class="buy-btn">💖 Buy Now ₹99</a>
-  </div>
+  <section class="about" id="about">
+    <h2>About Me</h2>
+    <p>Welcome to my stylish website 💙✨<br>
+       I love creating, exploring, and living with positivity!</p>
+  </section>
+
+  <section class="love" id="love">
+    <h2>💙 Special 💙</h2>
+    <img src="https://i.ibb.co/B2N4R4wr/IMG-20250603-131234.jpg" alt="Aryan & Aruu">
+    <h3>💙 Aruu & Lakshu 💙</h3>
+  </section>
+
+  <section class="contact" id="contact">
+    <h2>Contact Me</h2>
+    <div class="socials">
+      <a href="https://www.instagram.com/aryan_for_s?igsh=c3Z3ODB3NmlydzEx" target="_blank">
+        <img src="https://cdn-icons-png.flaticon.com/512/2111/2111463.png" alt="Instagram">
+      </a>
+      <a href="https://wa.me/7000482653" target="_blank">
+        <img src="https://cdn-icons-png.flaticon.com/512/733/733585.png" alt="WhatsApp">
+      </a>
+    </div>
+    <form onsubmit="sendMail(event)">
+      <input type="text" id="name" placeholder="Your Name" required><br>
+      <input type="email" id="email" placeholder="Your Email" required><br>
+      <textarea id="message" placeholder="Your Message" rows="4" required></textarea><br>
+      <button type="submit">Send</button>
+    </form>
+  </section>
+
+  <!-- ✅ Payment Section -->
+  <section class="payment" id="payment">
+    <h2>Support Me 💸</h2>
+    <p>If you like my work, you can send me a small support using UPI 👇</p>
+    <a href="upi://pay?pa=7000482653-2@ibl&pn=Aryan%20Keer&am=99&cu=INR" target="_blank">
+      <button>Pay ₹99 with UPI</button>
+    </a>
+    <p class="upi-id">My UPI ID: <b>7000482653-2@ibl</b></p>
+  </section>
 
   <footer>
-    © 2025 Aryan & Aruu. All rights reserved.
+    ✨ Made with ❤️ by Aryan Keer ✨
   </footer>
+
+  <script>
+    // Theme toggle
+    function toggleTheme() {
+      document.body.dataset.theme =
+        document.body.dataset.theme === "dark" ? "light" : "dark";
+    }
+
+    // Hamburger menu toggle
+    function toggleMenu() {
+      document.querySelector("nav").classList.toggle("active");
+    }
+
+    // Scroll animations
+    const sections = document.querySelectorAll(".about, .love, .contact, .payment");
+    window.addEventListener("scroll", () => {
+      sections.forEach(sec => {
+        const rect = sec.getBoundingClientRect();
+        if (rect.top < window.innerHeight - 100) {
+          sec.classList.add("show");
+        }
+      });
+    });
+
+    // Contact form
+    function sendMail(e) {
+      e.preventDefault();
+      const name = document.getElementById("name").value;
+      const email = document.getElementById("email").value;
+      const message = document.getElementById("message").value;
+      window.location.href = `mailto:aryankeer7000@gmail.com?subject=Message from ${name} (${email})&body=${message}`;
+    }
+  </script>
 </body>
 </html>
