--- a/index.html
+++ b/index.html
@@ -1,153 +1,148 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Aryan & Aruu</title>
-  <style>
-    body {
-      margin: 0;
-      font-family: 'Poppins', sans-serif;
-      background: linear-gradient(135deg, #000428, #004e92);
-      color: white;
-      text-align: center;
-      overflow-x: hidden;
-    }
-
-    h1 {
-      font-size: 55px;
-      margin-top: 20px;
-      text-shadow: 0px 0px 25px cyan, 0px 0px 40px blue;
-      animation: glow 2s infinite alternate;
-    }
-
-    @keyframes glow {
-      from { text-shadow: 0px 0px 10px cyan; }
-      to { text-shadow: 0px 0px 30px blue; }
-    }
-
-    img.main-photo {
-      width: 270px;
-      height: 320px;
-      object-fit: cover;
-      border-radius: 20px;
-      border: 4px solid cyan;
-      box-shadow: 0px 0px 25px cyan;
-      margin-top: 20px;
-      transition: transform 0.4s;
-    }
-
-    img.main-photo:hover {
-      transform: scale(1.05);
-      box-shadow: 0px 0px 40px #00f5ff;
-    }
-
-    .about {
-      margin: 40px auto;
-      width: 85%;
-      font-size: 20px;
-      line-height: 1.8;
-      background: rgba(255,255,255,0.1);
-      padding: 20px;
-      border-radius: 15px;
-      box-shadow: 0px 0px 20px rgba(0,255,255,0.4);
-    }
-
-    .socials {
-      margin: 50px 0;
-    }
-
-    .socials a {
-      margin: 0 20px;
-      display: inline-block;
-      transition: transform 0.3s, box-shadow 0.3s;
-    }
-
-    .socials img {
-      width: 60px;
-      height: 60px;
-      border-radius: 50%;
-      border: 3px solid white;
-    }
-
-    .socials a:hover {
-      transform: scale(1.2);
-      box-shadow: 0px 0px 25px cyan;
-      border-radius: 50%;
-    }
-
-    .extra-space {
-      height: 250px; /* scroll ke liye */
-    }
-
-    footer {
-      margin-top: 40px;
-      padding: 20px;
-      background: rgba(255,255,255,0.1);
-      border-top: 2px solid cyan;
-      font-size: 20px;
-    }
-
-    .love {
-      font-size: 28px;
-      margin-top: 15px;
-      text-shadow: 0px 0px 15px pink, 0px 0px 30px red;
-      animation: heartbeat 1.5s infinite;
-    }
-
-    @keyframes heartbeat {
-      0%, 100% { transform: scale(1); }
-      50% { transform: scale(1.2); }
-    }
-
-    img.couple-photo {
-      width: 200px;
-      height: 200px;
-      border-radius: 50%;
-      border: 4px solid pink;
-      box-shadow: 0px 0px 20px hotpink;
-      margin-top: 15px;
-      object-fit: cover;
-    }
-  </style>
-</head>
-<body>
-
-  <!-- Background Music -->
-  <audio autoplay loop>
-    <source src="https://www.bensound.com/bensound-music/bensound-romantic.mp3" type="audio/mpeg">
-  </audio>
-
-  <h1>⚡ Aryan Keer ⚡</h1>
-
-  <img class="main-photo" src="https://i.ibb.co/8Dfdkz1W/IMG-20250219-070558.jpg" alt="Aryan Photo">
-
-  <div class="about">
-    <p>Hey 👋, I’m <b>Aryan Keer</b>.<br>
-    Welcome to my stylish website 💙✨<br>
-    Life is short, so live it with full energy 🔥⚡</p>
-  </div>
-
-  <div class="socials">
-    <!-- Instagram -->
-    <a href="https://www.instagram.com/aryan_for_s?igsh=c3Z3ODB3NmlydzEx" target="_blank">
-      <img src="https://cdn-icons-png.flaticon.com/512/2111/2111463.png" alt="Instagram">
-    </a>
-
-    <!-- WhatsApp -->
-    <a href="https://wa.me/7000482653" target="_blank">
-      <img src="https://cdn-icons-png.flaticon.com/512/733/733585.png" alt="WhatsApp">
-    </a>
-  </div>
-
-  <div class="extra-space"></div>
-
-  <footer>
-    <p>✨ Made with ❤️ by Aryan Keer ✨</p>
-    <p class="love">💙 Aruu & Lakshu 💙</p>
-    <!-- Couple photo niche -->
-    <img class="couple-photo" src="https://i.ibb.co/B2N4R4wr/IMG-20250603-131234.jpg" alt="Aryan & Aruu">
-  </footer>
-
-</body>
+<!DOCTYPE html>  
+<html lang="en">  
+<head>  
+  <meta charset="UTF-8">  
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">  
+  <title>Aryy_lakk_Fonts</title>  
+  <style>  
+    body { margin:0; font-family: Arial, sans-serif; background: #f5f5f5; text-align: center; }  
+    header { background: #333; color: white; padding: 10px 15px; display: flex; align-items: center; }  
+    header img { height: 40px; margin-right: 10px; }  
+    header h2 { margin: 0; font-size: 20px; }  
+    nav { background: #444; display: flex; justify-content: space-around; }  
+    nav a { color: white; padding: 12px; text-decoration: none; font-weight: bold; }  
+    nav a:hover { background: #666; }  
+    .container { padding: 20px; }  
+    h1 { color: #333; margin-bottom: 15px; }  
+    input { width: 90%; max-width: 500px; padding: 12px; font-size: 16px; border-radius: 8px; border: 1px solid #ccc; outline: none; }  
+    #fontsContainer { margin-top: 20px; }  
+    .font-box { background: #fff; padding: 15px; border-radius: 10px; margin: 10px 0; box-shadow: 0 2px 6px rgba(0,0,0,0.1); display: flex; justify-content: space-between; align-items: center; }  
+    .font-text { font-size: 20px; text-align: left; flex: 1; margin-right: 10px; }  
+    button { background: #333; color: #fff; border: none; padding: 6px 12px; border-radius: 6px; cursor: pointer; font-size: 14px; }  
+    button:hover { background: #555; }  
+    #emojiContainer { display: grid; grid-template-columns: repeat(auto-fit, minmax(80px, 1fr)); gap: 12px; margin-top: 20px; }  
+    .emoji-box { background: #fff; border-radius: 10px; padding: 10px; font-size: 22px; box-shadow: 0 2px 6px rgba(0,0,0,0.1); cursor: pointer; white-space: pre-wrap; }  
+    .emoji-box:hover { background: #f0f0f0; }  
+  </style>  
+</head>  
+<body>  
+  
+  <header>  
+    <img src="https://i.ibb.co/BdMSLcd/IMG-20251003-131209.jpg" alt="Logo">  
+    <h2>Aryy_lakk_Fonts</h2>  
+  </header>  
+  
+  <nav>  
+    <a href="#" onclick="showPage('fontsPage')">Fonts</a>  
+    <a href="#" onclick="showPage('emojiPage')">Emojis</a>  
+  </nav>  
+  
+  <!-- Fonts Page -->  
+  <div id="fontsPage" class="container">  
+    <h1>🌍 Fancy Fonts Preview</h1>  
+    <input type="text" id="userInput" placeholder="Type your text..." oninput="generateFonts()" />  
+    <div id="fontsContainer"></div>  
+  </div>  
+  
+  <!-- Emoji Page -->  
+  <div id="emojiPage" class="container" style="display:none;">  
+    <h1>😊 Cute / Kaomoji Emojis</h1>  
+    <div id="emojiContainer"></div>  
+  </div>  
+  
+  <script>  
+    // ✅ Different font styles / transformations  
+    const fontStyles = [  
+      txt => `𝑰𝒕𝒂𝒍𝒊𝒄: ${toItalic(txt)}`,  
+      txt => `𝗕𝗼𝗹𝗱: ${toBold(txt)}`,  
+      txt => `𝔊𝔬𝔱𝔥𝔦𝔠: ${toGothic(txt)}`,  
+      txt => `𝒮𝒸𝓇𝒾𝓅𝓉: ${toScript(txt)}`,  
+      txt => `ⓒⓘⓡⓒⓛⓔ: ${toCircle(txt)}`,  
+      txt => `🅑🅞🅧: ${toBlackBox(txt)}`,  
+      txt => `Uᴘsɪᴅᴇ Dᴏᴡɴ: ${toUpside(txt)}`,  
+    ];  
+  
+    function generateFonts() {  
+      const text = document.getElementById("userInput").value || "Your Name";  
+      const container = document.getElementById("fontsContainer");  
+      container.innerHTML = "";  
+      fontStyles.forEach(styleFn => {  
+        const styledText = styleFn(text);  
+        const box = document.createElement("div");  
+        box.className = "font-box";  
+        box.innerHTML = `  
+          <div class="font-text">${styledText}</div>  
+          <button onclick="copyText('${styledText}')">Copy</button>  
+        `;  
+        container.appendChild(box);  
+      });  
+    }  
+  
+    function copyText(txt) {  
+      navigator.clipboard.writeText(txt);  
+      alert("Copied: " + txt);  
+    }  
+  
+    // ✅ Helper functions  
+    const mapChars = (chars) => (txt) =>  
+      txt.split("").map(c => chars[c] || c).join("");  
+  
+    const toBold = mapChars({  
+      A:"𝗔",B:"𝗕",C:"𝗖",D:"𝗗",E:"𝗘",F:"𝗙",G:"𝗚",H:"𝗛",I:"𝗜",J:"𝗝",K:"𝗞",L:"𝗟",M:"𝗠",N:"𝗡",O:"𝗢",P:"𝗣",Q:"𝗤",R:"𝗥",S:"𝗦",T:"𝗧",U:"𝗨",V:"𝗩",W:"𝗪",X:"𝗫",Y:"𝗬",Z:"𝗭",  
+      a:"𝗮",b:"𝗯",c:"𝗰",d:"𝗱",e:"𝗲",f:"𝗳",g:"𝗴",h:"𝗵",i:"𝗶",j:"𝗷",k:"𝗸",l:"𝗹",m:"𝗺",n:"𝗻",o:"𝗼",p:"𝗽",q:"𝗾",r:"𝗿",s:"𝘀",t:"𝘁",u:"𝘂",v:"𝘃",w:"𝘄",x:"𝘅",y:"𝘆",z:"𝘇"  
+    });  
+  
+    const toItalic = mapChars({  
+      A:"𝑨",B:"𝑩",C:"𝑪",D:"𝑫",E:"𝑬",F:"𝑭",G:"𝑮",H:"𝑯",I:"𝑰",J:"𝑱",K:"𝑲",L:"𝑳",M:"𝑴",N:"𝑵",O:"𝑶",P:"𝑷",Q:"𝑸",R:"𝑹",S:"𝑺",T:"𝑻",U:"𝑼",V:"𝑽",W:"𝑾",X:"𝑿",Y:"𝒀",Z:"𝒁",  
+      a:"𝒂",b:"𝒃",c:"𝒄",d:"𝒅",e:"𝒆",f:"𝒇",g:"𝒈",h:"𝒉",i:"𝒊",j:"𝒋",k:"𝒌",l:"𝒍",m:"𝒎",n:"𝒏",o:"𝒐",p:"𝒑",q:"𝒒",r:"𝒓",s:"𝒔",t:"𝒕",u:"𝒖",v:"𝒗",w:"𝒘",x:"𝒙",y:"𝒚",z:"𝒛"  
+    });  
+  
+    const toGothic = mapChars({  
+      A:"𝔄",B:"𝔅",C:"ℭ",D:"𝔇",E:"𝔈",F:"𝔉",G:"𝔊",H:"ℌ",I:"ℑ",J:"𝔍",K:"𝔎",L:"𝔏",M:"𝔐",N:"𝔑",O:"𝔒",P:"𝔓",Q:"𝔔",R:"ℜ",S:"𝔖",T:"𝔗",U:"𝔘",V:"𝔙",W:"𝔚",X:"𝔛",Y:"𝔜",Z:"ℨ"  
+    });  
+  
+    const toScript = mapChars({  
+      A:"𝒜",B:"ℬ",C:"𝒞",D:"𝒟",E:"ℰ",F:"ℱ",G:"𝒢",H:"ℋ",I:"ℐ",J:"𝒥",K:"𝒦",L:"ℒ",M:"ℳ",N:"𝒩",O:"𝒪",P:"𝒫",Q:"𝒬",R:"ℛ",S:"𝒮",T:"𝒯",U:"𝒰",V:"𝒱",W:"𝒲",X:"𝒳",Y:"𝒴",Z:"𝒵"  
+    });  
+  
+    const toCircle = mapChars({  
+      A:"Ⓐ",B:"Ⓑ",C:"Ⓒ",D:"Ⓓ",E:"Ⓔ",F:"Ⓕ",G:"Ⓖ",H:"Ⓗ",I:"Ⓘ",J:"Ⓙ",K:"Ⓚ",L:"Ⓛ",M:"Ⓜ",N:"Ⓝ",O:"Ⓞ",P:"Ⓟ",Q:"Ⓠ",R:"Ⓡ",S:"Ⓢ",T:"Ⓣ",U:"Ⓤ",V:"Ⓥ",W:"Ⓦ",X:"Ⓧ",Y:"Ⓨ",Z:"Ⓩ"  
+    });  
+  
+    const toBlackBox = mapChars({  
+      A:"🅰",B:"🅱",C:"🅲",D:"🅳",E:"🅴",F:"🅵",G:"🅶",H:"🅷",I:"🅸",J:"🅹",K:"🅺",L:"🅻",M:"🅼",N:"🅽",O:"🅾",P:"🅿",Q:"🆀",R:"🆁",S:"🆂",T:"🆃",U:"🆄",V:"🆅",W:"🆆",X:"🆇",Y:"🆈",Z:"🆉"  
+    });  
+  
+    const toUpside = (txt) => txt.split("").reverse().join("");  
+  
+    // ✅ Emojis  
+    const emojiList = [  
+      "ᥫ᭡", "♡", "-`♡´-", "𝜗𝜚", "ᯓ", "˗ˏˋ ♡ ˎˊ˗", "ᯓᡣ𐭩", "✈︎",  
+      "⋆˙⟡","⋆˚꩜｡","𐔌՞. .՞𐦯","(˶˃ ᵕ ˂˶)","⋆. 𐙚 ˚","⸜(｡˃ ᵕ ˂ )⸝♡","✮⋆˙","⋆˚✿˖°","ꉂ(˵˃ ᗜ ˂˵)",  
+      "˚.🎀༘⋆","ღゝ◡╹)ノ♡","(｡♥‿♥｡)","(✿◠‿◠)","ʕ•ᴥ•ʔ","(づ｡◕‿‿◕｡)づ","٩(◕‿◕｡)۶","(≧◡≦)","♥‿♥","(⌒‿⌒)"  
+    ];  
+  
+    function loadEmojis() {  
+      const container = document.getElementById("emojiContainer");  
+      container.innerHTML = "";  
+      emojiList.forEach(e => {  
+        const div = document.createElement("div");  
+        div.className = "emoji-box";  
+        div.innerText = e;  
+        div.onclick = () => copyText(e);  
+        container.appendChild(div);  
+      });  
+    }  
+  
+    function showPage(id) {  
+      document.getElementById("fontsPage").style.display = "none";  
+      document.getElementById("emojiPage").style.display = "none";  
+      document.getElementById(id).style.display = "block";  
+    }  
+  
+    generateFonts();  
+    loadEmojis();  
+  </script>  
+  
+</body>  
 </html>
