--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-<!DOCTYPE html>  
+<!
+</head>  DOCTYPE html>  
 <html lang="en">  
 <head>  
   <meta charset="UTF-8">  
@@ -32,7 +33,6 @@
     .emoji-box { background: #fff; border-radius: 10px; padding: 10px; font-size: 22px; box-shadow: 0 2px 6px rgba(0,0,0,0.1); cursor: pointer; white-space: pre-wrap; }  
     .emoji-box:hover { background: #f0f0f0; }  
   </style>  
-</head>  
 <body>  
   
   <header>  
